[gd_scene load_steps=14 format=2]

[ext_resource path="res://cars/CarSUV.gd" type="Script" id=1]
[ext_resource path="res://assets/kenney_car_kit/suv.glb" type="PackedScene" id=2]
[ext_resource path="res://assets/texture_09.png" type="Texture" id=3]
[ext_resource path="res://Smoke.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/SNES - Top Gear 3000 - Sound Effects/Car Engine.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/SNES - Top Gear 3000 - Sound Effects/Skid.wav" type="AudioStream" id=6]

[sub_resource type="PhysicsMaterial" id=1]
rough = true
bounce = 0.1
absorbent = true

[sub_resource type="SphereShape" id=2]

[sub_resource type="SphereMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
albedo_texture = ExtResource( 3 )

[sub_resource type="Animation" id=5]
length = 0.001

[sub_resource type="Animation" id=8]
resource_name = "decrease"
tracks/0/type = "value"
tracks/0/path = NodePath("CarMesh/SpotLight:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.822355, 1.28344, -2.50263 ), Vector3( -0.414967, 0.636414, -1.13668 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CarMesh/SpotLight2:translation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.815971, 1.28344, -2.50263 ), Vector3( 0.408583, 0.636414, -1.13668 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CarMesh/suv:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 2, 2, 2 ), Vector3( 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CarMesh/car_camera:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.98882, -1.25119 ), Vector3( 0, 1.03026, -0.484341 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:invencible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "increase"
tracks/0/type = "value"
tracks/0/path = NodePath("CarMesh/SpotLight:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.414967, 0.636414, -1.13668 ), Vector3( -0.822355, 1.28344, -2.50263 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CarMesh/SpotLight2:translation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.408583, 0.636414, -1.13668 ), Vector3( 0.815971, 1.28344, -2.50263 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CarMesh/suv:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 2, 2, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CarMesh/car_camera:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.03026, -0.484341 ), Vector3( 0, 1.98882, -1.25119 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:invencible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="CarSUV" type="Spatial"]
script = ExtResource( 1 )
invencible = true

[node name="CarMesh" type="Spatial" parent="."]

[node name="suv" parent="CarMesh" instance=ExtResource( 2 )]

[node name="RayCast" type="RayCast" parent="CarMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )
enabled = true

[node name="Smoke" parent="CarMesh" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.520535, 0, 0.549937 )
emitting = false

[node name="Smoke2" parent="CarMesh" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.474042, 0, 0.549937 )
emitting = false

[node name="SpotLight" type="SpotLight" parent="CarMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.414967, 0.636414, -1.13668 )
light_energy = 2.0
shadow_enabled = true
spot_range = 12.0
spot_angle = 40.0

[node name="SpotLight2" type="SpotLight" parent="CarMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.408583, 0.636414, -1.13668 )
shadow_enabled = true
spot_range = 12.0
spot_angle = 40.0

[node name="accel_sound" type="AudioStreamPlayer3D" parent="CarMesh"]
stream = ExtResource( 5 )
unit_db = -3.0
max_db = -9.0

[node name="steer_sound" type="AudioStreamPlayer3D" parent="CarMesh"]
stream = ExtResource( 6 )
unit_db = -3.0

[node name="car_camera" type="Camera" parent="CarMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03026, -0.484341 )
doppler_tracking = 2
far = 1000.0

[node name="Ball" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
physics_material_override = SubResource( 1 )
gravity_scale = 10.0
angular_damp = 5.0

[node name="CollisionShape" type="CollisionShape" parent="Ball"]
shape = SubResource( 2 )

[node name="DebugMesh" type="MeshInstance" parent="Ball"]
visible = false
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="timer" type="Timer" parent="."]
wait_time = 180.0

[node name="animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/decrease = SubResource( 8 )
anims/increase = SubResource( 7 )

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
